# zephyr-optee-test

./: CMakeLists.txt  LICENSE  README.md  prj.conf  west.yml
adbg/: CMakeLists.txt
adbg/include/: adbg.h
adbg/src/: adbg_expect.c  adbg_log.c  security_utils_hex.c
boards/: qemu_cortex_a53.conf  qemu_cortex_a53.overlay  rcar_h3ulcb_ca57.overlay  rcar_h3ulcb_r8a77951_a57.overlay  rcar_spider.overlay  xenvm_gicv3.conf
include/: tee_api_types.h  types_ext.h  utee_defines.h  util.h
optee_os/: compiler.h  types_ext.h
scripts/: file_to_c.py  gen_ta_src.py  prepare_ta.sh
src/: optee_test.c  optee_test.h  pkcs11_1000.c  regression_1000.c  regression_4000.c  regression_4000_data.h  regression_4100.c  regression_6000.c  regression_8000.c  regression_8100.c  sdp_basic.c  xtest_helpers.c  xtest_helpers.h
src/orig/: .pkcs11_1000.c.swp
